k8s/apps/app1-service.yaml
# MTKC POC EKS - Sample Application 1 Service

---
apiVersion: v1
kind: Service
metadata:
  name: sample-app-1
  namespace: sample-apps
  labels:
    app: sample-app-1
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      name: http
  selector:
    app: sample-app-1
