k8s/apps/app2-service.yaml
# MTKC POC EKS - Sample Application 2 Service

---
apiVersion: v1
kind: Service
metadata:
  name: sample-app-2
  namespace: sample-apps
  labels:
    app: sample-app-2
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      name: http
  selector:
    app: sample-app-2
